something is not good with the project. upload to git to check deeper